Polished a lot of screen UIs.